[package]
name = "cliquepicking"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "cliquepicking"
crate-type = ["cdylib"]

[dependencies]
cliquepicking_rs = { path = "../cliquepicking_rs" }
num-bigint = "0.4.6"
pyo3 = { version = "0.23.3", features = ["num-bigint"] }
