[package]
name = "cliquepicking"
version = "0.3.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "cliquepicking"
crate-type = ["cdylib"]

[dependencies]
cliquepicking_rs = { path = "../cliquepicking_rs" }
num-bigint = "0.4"
pyo3 = { version = "0.25", features = ["num-bigint"] }
rand = "0.8"
